--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -106,5 +106,6 @@
   "permissionNeeded": "Permission Needed",
   "locationPermission": "This app relies on read access to your location. \nWe require access to this permission to find your current location.",
   "notificationPermission" : "We require access to this permission to send you notification.",
-  "alarmPermission" : "We require access to this permission to track your current location."
+  "alarmPermission" : "We require access to this permission to track your current location.",
+  "later": "Later"
 }
