--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -104,8 +104,13 @@
     }
   },
   "locationPermissionTitle": "Location Access",
-  "locationPermissionDesc": "This app requires location access to automatically detect and record your activities.",
+  "locationPermissionDesc": "Smart Driver collects location data to enable identification location even when the app is closed or not in use.",
   "allow": "Allow",
+  "notNow": "Skip (app would not work properly)",
   "openSetting": "Open Settings",
-  "enableLocationService": "Enable Location Service"
+  "enable": "Enable",
+  "enableLocationTitle": "Enable Location",
+  "updateLocationSetting": "Update Location Setting",
+  "nowNowLocation": "Not Now",
+  "locationDialogDesc": "We need to know your location in order to enable identification location"
 }
