--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -111,6 +111,7 @@
   "enable": "Enable",
   "enableLocationTitle": "Enable Location",
   "updateLocationSetting": "Update Location Setting",
+  "alwaysLocation": "Please allow to Always access location",
   "nowNowLocation": "Not Now",
   "locationDialogDesc": "We need to know your location in order to enable identification location"
 }
